--- a/public/admin.html
+++ b/public/admin.html
@@ -138,7 +138,7 @@
                             <td>1</td>
                             <td class="blanktable" id="s1"></td>
                             <td class="blanktable" id="subn1"></td>
-                            <td class="marks"><input type="number" id="num1"></td>
+                            <td class="marks"><input type="number" id="num1" max="100"></td>
                             <td class="blanktable" id="gpa1"></td>
                             <td class="blanktable" id="grade1"></td>
                         </tr>
@@ -146,7 +146,7 @@
                             <td>2</td>
                             <td class="blanktable" id="s2"></td>
                             <td class="blanktable" id="subn2"></td>
-                            <td class="marks"><input type="number" id="num2"></td>
+                            <td class="marks"><input class="blanktable" type="number" id="num2" max="100"></td>
                             <td class="blanktable" id="gpa2"></td>
                             <td class="blanktable" id="grade2"></td>
                         </tr>
@@ -154,7 +154,7 @@
                             <td>3</td>
                             <td class="blanktable" id="s3"></td>
                             <td class="blanktable" id="subn3"></td>
-                            <td class="marks"><input type="number" id="num3"></td>
+                            <td class="marks"><input type="number" id="num3" max="100"></td>
                             <td class="blanktable" id="gpa3"></td>
                             <td class="blanktable" id="grade3"></td>
                         </tr>
@@ -162,7 +162,7 @@
                             <td>4</td>
                             <td class="blanktable" id="s4"></td>
                             <td class="blanktable" id="subn4"></td>
-                            <td class="marks"><input type="number" id="num4"></td>
+                            <td class="marks"><input type="number" id="num4" max="100"></td>
                             <td class="blanktable" id="gpa4"></td>
                             <td class="blanktable" id="grade4"></td>
                         </tr>
@@ -170,7 +170,7 @@
                             <td>5</td>
                             <td class="blanktable" id="s5"></td>
                             <td class="blanktable" id="subn5"></td>
-                            <td class="marks"><input type="number" id="num5"></td>
+                            <td class="marks"><input type="number" id="num5" max="100"></td>
                             <td class="blanktable" id="gpa5"></td>
                             <td class="blanktable" id="grade5"></td>
                         </tr>
@@ -226,7 +226,7 @@
                     <br>
                     <ul id="pendingl">
                         <li>
-                            <span id="semester"></span>
+                            <span id="pendingsemester"></span>
                             <span> Semester</span>
                         </li>
                         <li>
@@ -259,6 +259,11 @@
                     <button class="ra rac" onclick="hideramodal()">Cancel</button>
                 </div>
             </div>
+        </div>
+        <div class="mobile">
+            <h3>Sorry this website is not optimized for mobile devices.</h3><br>
+            <h4>Please visit from a laptop/desktop using Chrome or Firefox.</h4><br>
+            <p>We are sorry for the trouble.</p>
         </div>
         <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
         <!-- TODO: Add SDKs for Firebase products that you want to use
